--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "chart.js": "^4.4.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
@@ -20,9 +21,12 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.31",
     "@types/react-datepicker": "^4.19.1",
