--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "autoprefixer": "^10.4.16",
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.0",
     "framer-motion": "^10.16.4",
     "next": "^14.0.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
@@ -31,11 +34,8 @@
     "@types/react": "^18.2.31",
     "@types/react-datepicker": "^4.19.1",
     "@types/react-dom": "^18.2.14",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-config-next": "^14.0.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   }
 }
